--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "my-project-root",
   "dependencies": {
-    "@vercel/speed-insights": "^1.2.0"
+    "@supabase/supabase-js": "^2.86.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.11"
   }
 }
